// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Tabs Tabs 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="TabScrollIndicators__TabScrollIndicatorContainer-sc-1cljxwo-0 gsIAKI"
      width="0"
    />
    <div
      class="Tabs__TabContainer-sc-9cqz9t-0 iOQqSP"
      role="tablist"
    >
      <div />
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF Tab1"
        role="tab"
        tabindex="0"
        type="button"
      >
        Tab 1
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF Tab2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 2
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF Tab3"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 3
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF Tab4"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 4
      </button>
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 1 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 2 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 3 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 4 Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tabs controlled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="TabScrollIndicators__TabScrollIndicatorContainer-sc-1cljxwo-0 gsIAKI"
      width="0"
    />
    <div
      class="Tabs__TabContainer-sc-9cqz9t-0 iOQqSP"
      role="tablist"
    >
      <div />
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF Tab1"
        role="tab"
        tabindex="0"
        type="button"
      >
        Tab 1
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF Tab2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 2
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF Tab3"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 3
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF Tab4"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 4
      </button>
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Uncontrolled Content: Tab 1
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Uncontrolled Content: Tab 2
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Uncontrolled Content: Tab 3
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Uncontrolled Content: Tab 4
    </div>
    <div
      class="ControlledTabContent"
    >
      Controlled Content: Tab 1
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tabs set to fitted 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="TabScrollIndicators__TabScrollIndicatorContainer-sc-1cljxwo-0 gsIAKI"
      width="0"
    />
    <div
      class="Tabs__TabContainer-sc-9cqz9t-0 iOQqSP"
      role="tablist"
    >
      <div />
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 idnSlG"
        role="tab"
        tabindex="0"
        type="button"
      >
        Tab 1
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 idnSlG"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 2
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 idnSlG"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 3
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 idnSlG"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 4
      </button>
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 1 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 2 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 3 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 4 Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tabs with a defaultSelectedIndex 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="TabScrollIndicators__TabScrollIndicatorContainer-sc-1cljxwo-0 gsIAKI"
      width="0"
    />
    <div
      class="Tabs__TabContainer-sc-9cqz9t-0 iOQqSP"
      role="tablist"
    >
      <div />
      <button
        aria-selected="true"
        class="Tab__TabButton-sc-1wffi7g-0 cTNrRd"
        role="tab"
        selected=""
        tabindex="0"
        type="button"
      >
        Tab 1
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 2
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 3
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 4
      </button>
    </div>
    <div
      aria-hidden="false"
      selected=""
    >
      Tab 1 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 2 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 3 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 4 Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tabs with all tab states 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div>
      <button
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF"
        role="tab"
        type="button"
      >
        Tab
      </button>
      <button
        class="Tab__TabButton-sc-1wffi7g-0 cTNrRd"
        role="tab"
        selected=""
        type="button"
      >
        Tab
      </button>
      <button
        class="Tab__TabButton-sc-1wffi7g-0 bSZpzw"
        disabled=""
        role="tab"
        type="button"
      >
        Tab
      </button>
      <button
        class="Tab__TabButton-sc-1wffi7g-0 fNrpip"
        disabled=""
        role="tab"
        selected=""
        type="button"
      >
        Tab
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tabs with content loaded on selection 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="TabScrollIndicators__TabScrollIndicatorContainer-sc-1cljxwo-0 gsIAKI"
      width="0"
    />
    <div
      class="Tabs__TabContainer-sc-9cqz9t-0 iOQqSP"
      role="tablist"
    >
      <div />
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF Tab1"
        role="tab"
        tabindex="0"
        type="button"
      >
        Tab 1
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF Tab2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 2
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tabs with inputs 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="TabScrollIndicators__TabScrollIndicatorContainer-sc-1cljxwo-0 gsIAKI"
      width="0"
    />
    <div
      class="Tabs__TabContainer-sc-9cqz9t-0 iOQqSP"
      role="tablist"
    >
      <div />
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF Tab1"
        role="tab"
        tabindex="0"
        type="button"
      >
        Tab 1
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF Tab2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 2
      </button>
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      <input
        class="Input1"
      />
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      <input
        class="Input2"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tabs with scrolling tabs 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="TabScrollIndicators__TabScrollIndicatorContainer-sc-1cljxwo-0 gsIAKI"
      width="0"
    />
    <div
      class="Tabs__TabContainer-sc-9cqz9t-0 iOQqSP tab-container"
      role="tablist"
    >
      <div />
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF"
        role="tab"
        tabindex="0"
        type="button"
      >
        Tab 1
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 2
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 3
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 4
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 5
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 6
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 7
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 8
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 9
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 10
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 11
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-1wffi7g-0 jIhLqF"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 12
      </button>
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 1 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 2 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 3 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 4 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 5 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 6 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 7 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 8 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 9 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 10 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 11 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 12 Content
    </div>
  </div>
</div>
`;
